--- a/Intervals/Intervals.csproj
+++ b/Intervals/Intervals.csproj
@@ -43,6 +43,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="IInterval`1.cs" />
+    <Compile Include="IntegerInterval.cs" />
     <Compile Include="IntervalExtensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StringInterval.cs" />
