--- a/Intervals.Tests/packages.config
+++ b/Intervals.Tests/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="GitVersionTask" version="4.0.0-beta0009" targetFramework="net40" developmentDependency="true" />
   <package id="NUnit" version="3.5.0" targetFramework="net40" />
   <package id="NUnit3TestAdapter" version="3.6.0" targetFramework="net40" />
   <package id="StyleCop.Analyzers" version="1.0.0" targetFramework="net40" developmentDependency="true" />
