--- a/Intervals/packages.config
+++ b/Intervals/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="FixMe" version="0.1.0" targetFramework="net35" developmentDependency="true" />
   <package id="GitVersionTask" version="4.0.0-beta0009" targetFramework="net35" developmentDependency="true" />
   <package id="StyleCop.Analyzers" version="1.0.0" targetFramework="net35" developmentDependency="true" />
 </packages>
