--- a/Intervals.Tests/packages.config
+++ b/Intervals.Tests/packages.config
@@ -4,5 +4,6 @@
   <package id="GitVersionTask" version="4.0.0-beta0009" targetFramework="net40" developmentDependency="true" />
   <package id="NUnit" version="3.5.0" targetFramework="net40" />
   <package id="NUnit3TestAdapter" version="3.6.0" targetFramework="net40" />
+  <package id="OpenCover" version="4.6.519" targetFramework="net40" />
   <package id="StyleCop.Analyzers" version="1.0.0" targetFramework="net40" developmentDependency="true" />
 </packages>
