--- a/appveyor.yml
+++ b/appveyor.yml
@@ -14,6 +14,8 @@ after_test:
   - codecov -X gcov -f ".\Intervals.Tests\bin\%CONFIGURATION%\coverage.xml"
 cache:
   - packages -> **\packages.config
+artifacts:
+  - path: 'Package\bin\**\*.nupkg'
 skip_commits:
   files:
     - .gitattributes
