--- a/appveyor.yml
+++ b/appveyor.yml
@@ -16,6 +16,12 @@ cache:
   - packages -> **\packages.config
 artifacts:
   - path: 'Package\bin\**\*.nupkg'
+deploy:
+  provider: NuGet
+  api_key:
+    secure: 2tZ8tu75MkmhyIcFGzFZsukJx9WAfV94mMtIAnSlurGlGqKaUhG6n6fTimXiIQiB
+  skip_symbols: false
+  artifact: /.*\.nupkg/
 skip_commits:
   files:
     - .gitattributes
